--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <h1>World Clock</h1>
     <footer>
       This project is coded by Sibongile Tsopo and is
-      <a href="#" target="_blank">open-sourced on GitHub</a>
+      <a
+        href="https://github.com/SibongileT88/World-Clock-Project"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and hosted on
+      <a href="https://world-clock-projectst.netlify.app/" target="_blank"
+        >Netlify</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
