Added basic HTML to the structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>World Clock Project</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city..</option>
+
+        <option value="">Johannesburg</option>
+        <option value="">London</option>
+        <option value="">Bangkok</option>
+        <option value="">Dubai</option>
+      </select>
+      <div class="city">
+        <h2>Cape Town</h2>
+        <div class="date">September 2nd 2025</div>
+        <div class="time">2:50 AM</div>
+      </div>
+
+      <div class="city">
+        <h2>Abu Dhabi</h2>
+        <div class="date">September 2nd 2025</div>
+        <div class="time">2:50 AM</div>
+      </div>
+    </div>
     <footer>
       This project is coded by Sibongile Tsopo and is
       <a
