--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
         <option value="">Dubai</option>
       </select>
       <div class="city">
-        <h2>Cape Town</h2>
-        <div class="date">September 2nd 2025</div>
-        <div class="time">2:50 AM</div>
+        <div>
+          <h2>Cape Town</h2>
+          <div class="date">September 2nd 2025</div>
+        </div>
+        <div class="time">2:50 <small>AM</small></div>
       </div>
 
       <div class="city">
-        <h2>Abu Dhabi</h2>
-        <div class="date">September 2nd 2025</div>
-        <div class="time">2:50 AM</div>
+        <div>
+          <h2>Abu Dhabi</h2>
+          <div class="date">September 2nd 2025</div>
+        </div>
+        <div class="time">2:50 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project is coded by Sibongile Tsopo and is
+      This project is coded by <strong>Sibongile Tsopo</strong> and is
       <a
         href="https://github.com/SibongileT88/World-Clock-Project"
         target="_blank"
