--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Project</title>
   </head>
   <body>
@@ -13,22 +15,22 @@
       <select>
         <option value="">Select a city..</option>
 
-        <option value="">Johannesburg</option>
+        <option value="">Cape Town</option>
         <option value="">London</option>
         <option value="">Bangkok</option>
-        <option value="">Dubai</option>
+        <option value="">Abu Dhabi</option>
       </select>
-      <div class="city">
+      <div class="city" id="johannesburg">
         <div>
-          <h2>Cape Town</h2>
+          <h2>Johannesburg</h2>
           <div class="date">September 2nd 2025</div>
         </div>
         <div class="time">2:50 <small>AM</small></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="dubai">
         <div>
-          <h2>Abu Dhabi</h2>
+          <h2>Dubai</h2>
           <div class="date">September 2nd 2025</div>
         </div>
         <div class="time">2:50 <small>AM</small></div>
