--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
       <select>
         <option value="">Select a city..</option>
 
-        <option value="">Cape Town</option>
-        <option value="">London</option>
+        <option value="">Bali</option>
         <option value="">Bangkok</option>
-        <option value="">Abu Dhabi</option>
+        <option value="">London</option>
+        <option value="">Maldives</option>
       </select>
       <div class="city" id="johannesburg">
         <div>
           <h2>Johannesburg</h2>
-          <div class="date">September 2nd 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">2:50 <small>AM</small></div>
+        <div class="time"><small>AM</small></div>
       </div>
 
       <div class="city" id="dubai">
         <div>
           <h2>Dubai</h2>
-          <div class="date">September 2nd 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">2:50 <small>AM</small></div>
+        <div class="time"><small>AM</small></div>
       </div>
     </div>
     <footer>
