Added javascript functions to the select

--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city..</option>
 
-        <option value="">Bali</option>
-        <option value="">Bangkok</option>
-        <option value="">London</option>
-        <option value="">Maldives</option>
+        <option value="Asia/Bangkok">Bangkok</option>
+        <option value="America/Jamaica">Jamaica</option>
+        <option value="Europe/London">London</option>
+        <option value="Indian/Maldives">Maldives</option>
       </select>
-      <div class="city" id="johannesburg">
-        <div>
-          <h2>Johannesburg</h2>
-          <div class="date"></div>
-        </div>
-        <div class="time"><small>AM</small></div>
-      </div>
 
-      <div class="city" id="dubai">
-        <div>
-          <h2>Dubai</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="johannesburg">
+          <div>
+            <h2>Johannesburg</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small>AM</small></div>
         </div>
-        <div class="time"><small>AM</small></div>
+
+        <div class="city" id="dubai">
+          <div>
+            <h2>Dubai</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small>AM</small></div>
+        </div>
       </div>
     </div>
     <footer>
