added current location to the select

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <select id="city">
         <option value="">Select a city..</option>
-
+        <option value="current-location">My current location</option>
         <option value="Asia/Bangkok">Bangkok</option>
         <option value="America/Jamaica">Jamaica</option>
         <option value="Europe/London">London</option>
