Made final changes to the project.
Added an additional location with different time zone.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
       <select id="city">
         <option value="">Select a city..</option>
         <option value="current-location">My current location</option>
-        <option value="Asia/Bangkok">Bangkok</option>
-        <option value="America/Jamaica">Jamaica</option>
-        <option value="Europe/London">London</option>
-        <option value="Indian/Maldives">Maldives</option>
+        <option value="Asia/Bangkok">Bangkok &#127481;&#127469;</option>
+        <option value="Africa/Lagos">Lagos &#127475;&#127468;</option>
+        <option value="Europe/London">London &#127468;&#127463;</option>
+        <option value="Europe/Rome">Rome &#127470;&#127481;</option>
       </select>
 
       <div id="cities">
         <div class="city" id="johannesburg">
           <div>
-            <h2>Johannesburg</h2>
+            <h2>Johannesburg &#127487;&#127462;</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small>AM</small></div>
+        </div>
+
+        <div class="city" id="bali">
+          <div>
+            <h2>Bali &#127470;&#127465;</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small>AM</small></div>
@@ -32,7 +40,7 @@
 
         <div class="city" id="dubai">
           <div>
-            <h2>Dubai</h2>
+            <h2>Dubai &#127462;&#127466;</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small>AM</small></div>
